spooky lambda added